[package]
name = "actionkv"
version = "0.1.0"
edition = "2021"


[lib]
name = "libactionkv"
path = "src/lib.rs"

[[bin]]
name = "akv_mem"
path = "src/akv_mem.rs"

[[bin]]
name = "akv_disk"
path = "src/akv_disk.rs"

[dependencies]
bincode = "1"
byteorder = "1.5.0"
crc = "1.7"
serde = { version = "1.0.217", features = ["derive", "serde_derive"] }
serde_derive = "1.0.216"
